# icloudpd

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.build  README.md  compose.example.yaml  docker-compose.example.yml  icloudpd-config.example.yaml  pyproject.toml
.github/: RELEASE_TEMPLATE.md
integrations/telegram-bot/: .env.example  Dockerfile  E2E_CHECKLIST.md  README.md  docker-compose.example.yml  notification_script.py  pyproject.toml
integrations/telegram-bot/bot/: app.py  config.py  handlers.py  icloudpd_client.py  main.py  messages.py  mfa_result.py  mfa_waiter.py  notify_listener.py  state.py
integrations/telegram-bot/tests/: test_config.py  test_e2e_auth_only_push.py  test_e2e_session_lifecycle_push.py  test_handlers.py  test_icloudpd_client.py  test_messages.py  test_mfa_result.py  test_mfa_waiter.py  test_notify_listener.py  test_state.py
integrations/telegram-bot/tests/support/: mocked_bot.py
scripts/: install_deps  test_python_versions.sh
tests/: test_authentication.py  test_authentication_webui.py  test_autodelete_photos.py  test_cli.py  test_config_defaults.py  test_config_file.py  test_download_photos.py  test_download_photos_id.py  test_folder_structure.py  test_generate_xmp_file.py  test_manifest.py  test_manifest_integration.py  test_notifications.py  test_password_file_provider.py  test_photo_duplicate_asset_records.py  test_pyicloud_session_paths.py  test_server.py  test_session_expired_notification.py  test_session_expiry.py  test_session_expiry_notification.py  test_status.py  test_xmp_sidecar.py  (+1 more)
(+29 files in other folders)
