[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot"
version = "0.1.0"
description = "Optional, unsupported Telegram sidecar for icloudpd notifications (2FA and beyond). No maintenance commitment."
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.29.1",
    "aiohttp==3.11.11",
    "requests==2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.0",
    "pytest-asyncio==0.25.0",
    "pytest-aiohttp==1.1.0",
    "responses==0.25.3",
]

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
